--- a/public/index.html
+++ b/public/index.html
@@ -170,22 +170,23 @@
       .filename {
         font-style: italic;
       }
-    </style>
-    <script type="text/javascript">
-      function about() {
-        info = document.getElementById('about-content');
-        if (window.XMLHttpRequest)
-          { xhr = new XMLHttpRequest(); }
-        else
-          { xhr = new ActiveXObject("Microsoft.XMLHTTP"); }
-        xhr.open("GET","rails/info/properties",false);
-        xhr.send("");
-        info.innerHTML = xhr.responseText;
-        info.style.display = 'block'
+
+      #ruby {
+        height: 30%;
+        width: 30%;
       }
-    </script>
+    </style>
+    
   </head>
   <body>
 	  <h1>Lingbin Cai's page</h1>
+    <a href="https://github.com/lingbinc">Click me to view my github!</a></br>
+	  <form action="somepage.php" method="post">
+			  <input type="text" placeholder="Input Box">Input
+			  <button id="submit-button" onclick="submit()">Submit</button>
+			  <input type="radio" name="choice" value="1">1
+			  <input type="radio" name="choice" value="2">2
+    </form>
+    <img id="ruby" src="http://vmfarms.com/static/img/logos/ruby-logo.png">
   </body>
 </html>
